v0.4/guides/background/queues.mdx
---
title: "Queues & Jobs"
description: "Defer work to background jobs processed by a queue worker."
icon: "list-ol"
---

Queues let you move slow work -- sending email, processing uploads, calling third-party APIs -- out of the request cycle.
You dispatch a **job**, and a **queue worker** processes it in the background.

## Defining a job

```bash
bun ace make:job SendEmailJob
```

```ts app/jobs/SendEmailJob.ts
import BaseJob from "@bejibun/core/bases/BaseJob";

export default class SendEmailJob extends BaseJob {
    /**
     * Execute the job.
     *
     * @var $arguments Array<any>
     */
    public async handle(args: Array<any>): Promise<void> {
        // ...
    }
}
```

## Dispatching jobs

Call `dispatch()` with any arguments, then `send()` to enqueue:

```ts
// run as soon as a worker picks it up
await SendEmailJob.dispatch(payload).send();

// delay execution (seconds)
await SendEmailJob.dispatch(payload)
    .delay(60 * 10)
    .send(); // 10 minutes
```

The dispatched arguments arrive as the `args` array in `handle(args)`.

| Method              | Effect                          |
| ------------------- | ------------------------------- |
| `dispatch(...args)` | Queue the job with arguments    |
| `delay(seconds)`    | Delay availability by N seconds |
| `send()`            | Persist the job (await this)    |

## How jobs are stored

Jobs are persisted to a `jobs` table (created by the `00010101_000001_jobs` migration).
Each row records the queue, the JSON payload, the available-at time, and attempt bookkeeping.

<Note>Run `bun ace migrate:latest` so the `jobs` table exists before dispatching.</Note>

## Running the worker

```bash
bun ace queue:work     # process jobs as a long-running daemon
bun ace queue:retry    # retry a failed job
bun ace queue:flush    # flush all failed jobs
```

<Tip>
    In production, run `queue:work` under a process manager (PM2, systemd, or a container restart
    policy) so it stays alive.
</Tip>
