v0.6/guides/background/queues.mdx
---
title: "Queues & Jobs"
description: "Defer work to background jobs processed by a queue worker."
icon: "list-ol"
---

Queues let you move slow work -- sending email, processing uploads, calling third-party APIs -- out of the request cycle.
You dispatch a **job**, and a **queue worker** processes it in the background.

## Defining a job

```bash
bun ace make:job SendEmailJob
```

```ts app/jobs/SendEmailJob.ts
import BaseJob from "@bejibun/core/bases/BaseJob";

export default class SendEmailJob extends BaseJob {
    /**
     * Execute the job.
     *
     * @var $arguments Array<any>
     */
    public async handle(args: Array<any>): Promise<void> {
        // ...
    }
}
```

## Dispatching jobs

Call `dispatch()` with any arguments, then `send()` to enqueue:

```ts
// run as soon as a worker picks it up
await SendEmailJob.dispatch(payload).send();

// delay execution (seconds)
await SendEmailJob.dispatch(payload)
    .delay(60 * 10)
    .send(); // 10 minutes
```

The dispatched arguments arrive as the `args` array in `handle(args)`.

| Method              | Effect                          |
| ------------------- | ------------------------------- |
| `dispatch(...args)` | Queue the job with arguments    |
| `delay(seconds)`    | Delay availability by N seconds |
| `send()`            | Persist the job (await this)    |

## How jobs are stored

Jobs are persisted to a `jobs` table (created by the `00010101_000001_jobs` migration).
Each row records the queue, the JSON payload, the available-at time, attempt bookkeeping,
and a `reserved_at` timestamp used to claim the job while it's being processed.

<Note>Run `bun ace migrate:latest` so the `jobs` table exists before dispatching.</Note>

## Running the worker

```bash
bun ace queue:work    # process jobs as a long-running daemon
bun ace queue:retry   # retry a failed job
bun ace queue:flush   # flush all failed jobs
```

<Tip>
    In production, run `queue:work` under a process manager (PM2, systemd, or a container restart
    policy) so it stays alive.
</Tip>

## Running multiple workers

You can safely run more than one `queue:work` process against the same queue --
each worker atomically claims a job (via `reserved_at`) before processing it,
so two workers can never pick up the same job at once.

If a worker crashes mid-job, its reservation isn't held forever: once `retry_after` seconds have passed,
`queue:work` treats the job as abandoned and another worker will reclaim it.
`queue:retry` uses the same atomic claiming to avoid double-processing a failed job,
so it's safe to run alongside `queue:work` or another `queue:retry` --
though it doesn't reclaim stale reservations itself,
so a job that crashes mid-retry stays reserved until you run `queue:retry` again.

## Configuring retry and reservation timing

Both the idle-poll delay and the reservation timeout come from `retry_after` in `config/queue.ts`:

```ts config/queue.ts
import QueueDriverEnum from "@bejibun/core/enums/QueueDriverEnum";
import JobModel from "@bejibun/core/models/JobModel";

const config: Record<string, any> = {
    default: env("QUEUE_DRIVER", "database"),

    connections: {
        database: {
            driver: QueueDriverEnum.Database,
            table: JobModel.tableName,
            retry_after: 60
        }
    }
};

export default config;
```

| Behavior                                                         | Driven by     |
| ---------------------------------------------------------------- | ------------- |
| How long a worker waits before polling again when idle           | `retry_after` |
| How long a worker waits before retrying after a failed attempt   | `retry_after` |
| How long a job stays reserved before another worker can claim it | `retry_after` |

See [Configuration](/v0.6/guides/getting-started/configuration#queue-configuration) for the full config reference.
